refactor(jvm): 增加gc参数